# quotation_builder

./: pyproject.toml
quotationBuilder/: manage.py  quotationBuilder_templates.pptx  quotationbuilders.sqlite3  requirements.txt
quotationBuilder/quotation/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
quotationBuilder/quotation/migrations/: 0001_initial.py  0002_employee.py  0003_remove_company_addedby_and_more.py  0004_hotel_username.py  0005_alter_hotel_username.py  0006_company_username.py  0007_delete_companyhotelrate.py  0008_remove_hotelrate_hotelname_companyhotelrate_and_more.py  0009_rename_companydescription_company_company_description_and_more.py  0010_employee_date_added_employee_employee_id_and_more.py  0011_hotelrate_company_applicable_to.py  0012_remove_hotelrate_hotel_name_hotelrate_hotel_name.py  0013_quotationmainrequest_remove_hotel_username_and_more.py  0014_remove_quotationmainrequest_destination_and_more.py  0015_quotationroomrequest_package_type.py  0016_hotel_username.py  0017_alter_hotel_username.py  0018_alter_hotel_username.py  0019_alter_company_username_alter_hotel_username.py  0020_remove_quotationmainrequest_area_and_more.py  0021_quotationroomrequest_no_of_adults_single.py  0022_remove_quotationroomrequest_no_of_adults_single.py  0023_alter_company_username_alter_hotel_username.py  0024_remove_company_username_remove_hotel_username_and_more.py  0037_usertype.py  (+12 more)
quotationBuilder/quotationBuilder/: __init__.py  _version.py  asgi.py  filters.py  settings.py  urls.py  wsgi.py
quotationBuilder/static/: requirements.txt
(+44 files in other folders)
